--- a/songuyen.html
+++ b/songuyen.html
@@ -41,7 +41,7 @@
         let num = +document.getElementById('num').value;
         while (c<num) {
             if (primeNumber(n)) {
-                res+= n +"; ";
+                res+= n +". ";
                 c++;
             }
             n++;
